modificaciones +  nuevo documento js

--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<head></head>
+<head> 
+     <title>html para git</title>   <meta charset="utf-8" >
+     <link rel="StyleSheet" href="style.css">
+</head>
 
 <body>
    <h1>Titulo principal </h1>
+
+   <section class="conjunto_cuadros">
+   <div class="cuadros"> A </div>
+   <div class="cuadros"> B </div>
+   <div class="cuadros"> C </div>
+   <div class="cuadros"> D </div>
+   <div class="cuadros"> E </div>
+   <div class="cuadros"> F </div>
+   </section>
+
+   
 </body>
 
 </html>
