--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
    <p id="pEncima" onmouseover="getElementById('pEncima').style.color = 'red' " 
    onmouseleave="getElementById('pEncima').style.color = 'green' "
    >Esto es un parrafo dinamico </p>
+
+   <p>"Hola estamos para ayudarte"</p>
    
 </body>
 
