Reparacion vinculo con css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head> 
      <title>html para git</title>   <meta charset="utf-8" >
-     <link rel="StyleSheet" href="style.css">
+     <link rel="StyleSheet" href="estilos.css">
 </head>
 
 <body>
