--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
    <div class="cuadros"> D </div>
    <div class="cuadros"> E </div>
    <div class="cuadros"> F </div>
+   <div class="cuadros"> G </div>
   
    </section>
    <p id="demo" class="cuadros"></p>>JavaScript puede cambiar el contenido HTML</p>
