--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
    <div class="cuadros"> E </div>
    <div class="cuadros"> F </div>
    <div class="cuadros"> G </div>
+   <div class="cuadros"> Ge Ge </div>
   
    </section>
    <p id="demo" class="cuadros"></p>>JavaScript puede cambiar el contenido HTML</p>
