Se agrego un div y se centraron los textos

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
    onmouseleave="getElementById('pEncima').style.color = 'green' "
    >Esto es un parrafo dinamico </p>
 
+    <div class="cuadros"> Nueva seccion parachutisme </div>
+
    <p>"Hola estamos para ayudarte"</p>
    
 </body>
