--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <div class="cuadros"> Nueva seccion parachutisme </div>
 
    <p>"Hola estamos para ayudarte"</p>
+
+   <p>Salchicha</p>
    
 </body>
 
